feat: add `overtime` endpoint impl
